[package]
name = "axum-on-workers"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { workspace = true }
console_error_panic_hook = { version = "0.1.1" }
axum = { version = "0.6.20", default-features = false, features = ["json"] }
tower-service = "0.3.2"
serde = { version = "1.0.197", features = ["derive"] }
wasm-bindgen-futures = "0.4"
